--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
   <body>
     <header class="page-header">
-      <div class="container">
-      kostya_kysik@ukr.net   +380 93 241 00 26
+    <div class="container">
+      <a  class="header-email" href="mailto:kostya_kysik@ukr.net">kostya_kysik@ukr.net</a>
+      <a class="header-phone" href="tel:+380932410026">+380 93 241 00 26</a>
     </div>
-    </header>
+  </header>
 
     <section class="hero-image">
       <div class="container">
@@ -24,6 +25,9 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познайомимось</h2>
+      <figure class="user-images">
+        <img src="files/user.jpg" width="1028" height="736" alt="Фотографія black2rider">
+      </figure>
       <h3>Декілька слів про себе</h3>
       <p>Текст з декількома словами про себе.</p>
       <h3>Чим я можу бути корисним</h3>
@@ -35,7 +39,11 @@
       <div class="container">
       <h2 class="subheading">Мої роботи</h2>
 
-      <h3>Мій сайт</h3>
+      <h3>Мій перший сайт</h3>
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт інструктора Кекса">
+        <a class="button" href="source/project/index.html">Відкрити сторінку</a>
+      </figure>
       <p>Невеликий лендінг про школу для початківців.</p>
 
       <h3>Блог верстальника початківця </h3>
@@ -44,8 +52,11 @@
     </section>
 
     <footer class="page-footer">
-      <div class="container">
-      +380 93 241 00 26
+  <div class="container">
+    <a class="footer-email" href="mailto:kostya_kysik@ukr.net">kostya_kysik@ukr.net</a>
+    <a class="footer-phone" href="tel:+380932410026">+38 093 241 00 26</a>
+  </div>
+</footer>
     </div>
     </footer>
   </body>
