--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <body>
     <header class="page-header">
     <div class="container">
-      <a  class="header-email" href="mailto:kostya_kysik@ukr.net">kostya_kysik@ukr.net</a>
       <a class="header-phone" href="tel:+380932410026">+380 93 241 00 26</a>
     </div>
   </header>
@@ -28,11 +27,24 @@
       <figure class="user-images">
         <img src="files/user.jpg" width="828" height="536" alt="Фотографія black2rider">
       </figure>
+      <div>
       <h3>Декілька слів про себе</h3>
       <p>Текст з декількома словами про себе.</p>
+      </div>
+      <div>
       <h3>Чим я можу бути корисним</h3>
-      <p>Текст про те, чим можу бути корисний.</p>
+      <p>Текст про те, чим можу бути корисний.</p
+      </div>
     </div>
+      <div class="skills">
+        <h3>Мої навички</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">HTML</dt>
+          <dd class="level"><div style="width: 60%">60%</div></dd>
+          <dt class="skill-css">CSS</dt>
+          <dd class="level"><div style="width: 40%">40%</div></dd>
+        </dl>
+      </div>
     </section>
 
     <section class="portfolio">
@@ -54,7 +66,6 @@
     <footer class="page-footer">
   <div class="container">
     <a class="footer-email" href="mailto:kostya_kysik@ukr.net">kostya_kysik@ukr.net</a>
-    <a class="footer-phone" href="tel:+380932410026">+38 093 241 00 26</a>
   </div>
 </footer>
     </div>
